Treasury bonds: value today
Spec: #181
